

  - The new ``modindex_common_prefix`` config value can be used to
    ignore certain package names for module index sorting.

  - The new ``trim_footnote_reference_space`` config value mirrors
    the docutils config value of the same name and removes the
    space before a footnote reference that is necessary for reST
    to recognize the reference.

* Builders:

  - New builder for Qt help collections, by Antonio Valentino.

  - The new ``DirectoryHTMLBuilder`` (short name ``dirhtml``) creates
    a separate directory for every page, and places the page there
    in a file called ``index.html``.  Therefore, page URLs and links
    don't need to contain ``.html``.

  - The new ``html_link_suffix`` config value can be used to select
    the suffix of generated links between HTML files.

* New translations:
  
  - Italian by Sandro Dentella.

  - Ukrainian by Petro Sasnyk.

  - Finnish by Jukka Inkeri.

* Extensions and API:

  - Autodoc now has a reusable Python API, which can be used to
    create custom types of objects to auto-document (e.g. Zope
    interfaces).  See also ``Sphinx.add_autodocumenter()``.

  - Autodoc now handles documented attributes.

  - Autodoc now handles inner classes and their methods.

  - Autodoc can document classes as functions now if explicitly
    marked with `autofunction`.

  - The function ``Sphinx.add_directive()`` now also supports
    docutils 0.5-style directive classes.  If they inherit from
    ``sphinx.util.compat.Directive``, they also work with
    docutils 0.4.

  - There is now a ``Sphinx.add_lexer()`` method to be able to use
    custom Pygments lexers easily.

  - There is now ``Sphinx.add_generic_role()`` to mirror the
    docutils' own function.

* Other changes:

  - Config overrides for single dict keys can now be given on the
    command line.

  - There is now a ``doctest_global_setup`` config value that can
    be used to give setup code for all doctests in the documentation.
